k8s/example-2/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-2
  namespace: example-2
  labels:
    app: kuber-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-2
  template:
    metadata:
      labels:
        app: http-server-2
    spec:
      containers:
      - name: kuber-app
        image: bakavets/kuber:v2.0
        ports:
        - containerPort: 8000
