k8s/example-2/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-2
  namespace: example-2
spec:
  selector:
    app: http-server-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
